<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/give_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/giveLocation"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/adView2" app:layout_constraintVertical_bias="0.100000024"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/latitudeText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/giveLocation"
            app:layout_constraintBottom_toTopOf="@+id/longitudeText"
            android:layout_marginTop="8dp" android:hint="@string/latitude"
            android:autofillHints="@string/latitude"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/longitudeText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/latitudeText" android:hint="@string/longitude"
            android:autofillHints="@string/longitude"/>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:onClick="showMap" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/longitudeText"/>

    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/mainosyksikko_id"
            android:layout_marginBottom="8dp"
            ads:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            ads:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginStart="8dp"
            ads:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            ads:layout_constraintEnd_toEndOf="parent">
    </com.google.android.gms.ads.AdView>

    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/mainosyksikko_id"
            android:layout_marginTop="16dp" ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintTop_toTopOf="parent" ads:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
    </com.google.android.gms.ads.AdView>

</android.support.constraint.ConstraintLayout>